--- a/src/resources/CSS/vistaInventario/BarraOpcionesInventario.css
+++ b/src/resources/CSS/vistaInventario/BarraOpcionesInventario.css
@@ -9,11 +9,8 @@ body{
 }
 
 .capa{
-    width: 100%;
-    height: 100vh;
-    background: transparent;
-    z-index: -1;
-    top: 0;left: 0;
+    width: 0%;
+    z-index: 0;
 }
 
 /* Header */
@@ -104,9 +101,16 @@ body{
 
 #btn-menu:checked ~ .capa{
     position: fixed;
-    /* background: rgba(0,0,0,0.6); */
-    background-color: #1f1f1f;
-} 
+    width: 100%;
+    height: 100vh;
+    background: transparent;
+    top: 0;left: 0;
+    background: rgba(0,0,0,0.6);
+    z-index: -1;
+}  
+#btn-menu:checked ~ .opciones{
+    z-index: -2;
+}  
 
 .cont-menu .bloque{
     width: 100%;
